# ADFlib

./: .gitignore  AUTHORS  BUGS.md  CMakeLists.txt  CMakeSettings.json  ChangeLog  INSTALL  Makefile.am  README  README.md  TODO  adflib.pc.in  arccsh.adf  autogen.sh  configure.ac  readme.md
.github/workflows/: autotools-build-windows.yml  autotools-build.yml  autotools.yml  cmake-build.yml  cmake.yml  deb-build.yml  deb-debian.yml  deb-ubuntu.yml  debian.yml
archive/: adflib-0.7.12.tar.bz2
debian/: README.Debian  README.source  changelog  control  copyright  libadf-dev.docs  libadf-dev.install  libadf-utils.install  libadf-utils.manpages  libadf.install  rules  unadf.install  unadf.manpages
doc/: API.txt  Makefile.am  adf_bitmap.1  adf_floppy_create.1  adf_floppy_format.1  adf_format.1  adf_salvage.1  adf_show_metadata.1  api_device.html  api_env.html  api_file.html  api_index.html  api_native.html  api_volume.html  unadf.1  version0.7.9d_gary.txt
doc/FAQ/: adf_info.html  adf_info.txt  adf_info_V0_9.txt
examples/: .gitignore  CMakeLists.txt  Makefile.am  adf_bitmap.c  adf_floppy_create.c  adf_floppy_format.c  adf_format.c  adf_salvage.c  adf_show_metadata.c  adf_show_metadata_common.c  adf_show_metadata_common.h  adf_show_metadata_dir.c  adf_show_metadata_dir.h  adf_show_metadata_file.c  adf_show_metadata_file.h  adf_show_metadata_volume.c  adf_show_metadata_volume.h  getopt.c  getopt.h  unadf.c
examples/tests/: adf-floppy-test.sh  adf-show-metadata-test.sh  common.sh  test-all-examples.sh  test_examples_basic.sh  unadf-test.sh  win32-names.adf
examples/tests/results/: adf-floppy-test_1  adf-floppy-test_2  adf-floppy-test_3  adf-floppy-test_4  adf-show-metadata-test_1  adf-show-metadata-test_2  adf-show-metadata-test_3  adf-show-metadata-test_4  adf-show-metadata-test_5  unadf_10  unadf_11  unadf_3  unadf_4  unadf_5  unadf_6  unadf_7  unadf_8  unadf_9
examples/tests/results_msys/: adf-floppy-test_1  adf-floppy-test_2  adf-floppy-test_3  adf-floppy-test_4  adf-show-metadata-test_1  adf-show-metadata-test_2  adf-show-metadata-test_3  adf-show-metadata-test_4  adf-show-metadata-test_5  unadf_10  unadf_11  unadf_3  unadf_4  unadf_5  unadf_6  unadf_7  unadf_8  unadf_9
packaging/debian/: changelog  control  copyright  libadf-dev.docs  libadf-dev.install  libadf-utils.install  libadf-utils.manpages  libadf.install  unadf.install  unadf.manpages  watch
regtest/Test/: Makefile.bak  bigdev.sh
regtests/Dumps/: cache_crash.adf  g1a30c.adf  test_link_chains.adf
regtests/Files/testffs_adf/: mod.And.DistantCall
regtests/Test/: .gitignore  CMakeLists.txt  Makefile.am  access.c  bigdev.sh  bitmap_read_segfault.c  bitmap_read_segfault.sh  bitmap_recreate.c  bitmap_recreate.sh  bootdisk.c  bootdisk.sh  bootdisk2.c  cache_crash.c  cache_crash.sh  cache_test.c  comment.c  common.sh  del_test.c  del_test.sh  dir_test.c  dir_test.sh  dir_test2.c  dir_test2.sh  dir_test_chdir.c  dir_test_chdir.sh  dirc.c  dirc_test.c  dispsect.c  file_read_hard_link_test.c  file_read_hard_link_test.sh  file_seek_after_write.c  file_seek_test.c  file_seek_test.sh  file_seek_test2.c  file_seek_test2.sh  file_test.c  file_test.sh  file_test2.c  file_test2.sh  file_test2a.c  (+33 more)
src/: CMakeLists.txt  Makefile.am  adf_bitm.c  adf_bitm.h  adf_blk.h  adf_blk_hd.h  adf_byteorder.h  adf_cache.c  adf_cache.h  adf_defs.h  adf_dev.c  adf_dev.h  adf_dev_driver.h  adf_dev_driver_dump.c  adf_dev_driver_dump.h  adf_dev_driver_nativ.h  adf_dev_driver_ramdisk.c  adf_dev_driver_ramdisk.h  adf_dev_drivers.c  adf_dev_drivers.h  adf_dev_dump.c  adf_dev_dump.h  adf_dev_flop.c  adf_dev_flop.h  adf_dev_hd.c  adf_dev_hd.h  adf_dev_ramdisk.c  adf_dev_ramdisk.h  adf_dir.c  adf_dir.h  adf_disk.c  adf_dump.c  adf_dump.h  adf_env.c  adf_env.h  adf_err.h  adf_file.c  adf_file.h  adf_file_block.c  adf_file_block.h  (+26 more)
src/generic/: Makefile.am  adf_dev_driver_nativ.c  adf_nativ.c  adf_nativ.h
src/linux/: Makefile.am  adf_dev_driver_nativ.c  adf_nativ.c  adf_nativ.h
src/win32/: Makefile-custom  Makefile.am  adf_dev_driver_nativ.c  adf_nativ.c  adf_nativ.h  adfvolinfo.c  nt4_dev.c  nt4_dev.h
tests/: .gitignore  CMakeLists.txt  Makefile.am  ramdisk.c  ramdisk.h  test_adfDays2Date.c  test_adfPos2DataBlock.c  test_adf_file_util.c  test_dev_mount.c  test_dev_open.c  test_examples  test_file_append.c  test_file_create.c  test_file_overwrite.c  test_file_overwrite2.c  test_file_seek.c  test_file_seek_after_write.c  test_file_truncate.c  test_file_truncate2.c  test_file_write.c  test_file_write_chunks.c  test_test_util.c  test_util.c  test_util.h
util/: build_deb.sh  bump-version  bump_project_version  cmake_build_shared  cmake_build_static  cmake_clean  cmake_configure_static  cmake_debug_build  cmake_debug_clean  cmake_debug_configure  cmake_debug_install  cmake_debug_test  cmake_install_static  cmake_release_build  cmake_release_configure  cmake_release_install  cmake_shared_build  cmake_shared_clean  cmake_shared_configure  cmake_shared_configure_cross_mingw  cmake_shared_install  cmake_shared_test  cmake_static_build  cmake_static_clean  cmake_static_configure  cmake_static_install  cmake_static_test  create_quilt3_archive.sh  deb_build.sh  deb_create_quilt3_archive.sh  info.txt  set_project_date  test_debug  test_examples  test_shared  test_static
